DevSettingsPage: remove style from logs button

--- a/SimpleWeather.Windows/Preferences/DevSettingsPage.xaml
+++ b/SimpleWeather.Windows/Preferences/DevSettingsPage.xaml
@@ -59,10 +59,7 @@
                     <ToggleSwitch x:Name="DebugSwitch" />
                 </StackPanel>
                 <StackPanel Padding="0,8">
-                    <Button
-                        x:Name="SaveLogsBtn"
-                        Content="Save Logs"
-                        Style="{StaticResource PrefTitleStyle}" />
+                    <Button x:Name="SaveLogsBtn" Content="Save Logs" />
                 </StackPanel>
             </StackPanel>
         </ScrollViewer>
